--- a/src/style.css
+++ b/src/style.css
@@ -911,7 +911,7 @@ dialog#delete-task button.primary {
 /* Notifications */
 #notifications-container {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   gap: 12px;
   position: fixed;
   width: 350px;
