--- a/src/style.css
+++ b/src/style.css
@@ -431,7 +431,7 @@ input[type="text"] {
   font-family: inherit;
   font-size: 1.375rem;
   font-weight: 500;
-  padding: 2px 4px 0 4px;
+  padding: 2px 55px 0 4px;
   background-color: var(--White);
   color: var(--Black);
   border: none;
@@ -548,6 +548,7 @@ textarea {
   border: none;
   border-radius: 8px;
   padding: 8px 16px;
+  width: 100%;
   outline: none;
   resize: none;
 }
@@ -564,9 +565,32 @@ textarea::placeholder {
   position: relative;
 }
 
+.textarea-input-container {
+  display: flex;
+}
+
 .text-counter {
   position: absolute;
-  right: 10px;
+  bottom: 4px;
+  opacity: 0;
+  font-size: 0.8rem;
+  color: var(--Primary);
+  user-select: none;
+  transition: opacity 200ms;
+}
+
+input[type="text"] + .text-counter {
+  right: 4px;
+}
+
+textarea + .text-counter {
+  right: 8px;
+}
+
+input[type="text"]:focus + .text-counter,
+textarea:focus + .text-counter {
+  opacity: 1;
+  transition: opacity 200ms;
 }
 
 /* Date input */
