Add show dialog animation

--- a/src/style.css
+++ b/src/style.css
@@ -407,6 +407,8 @@ dialog {
   background-color: var(--White);
   border: none;
   border-radius: 16px;
+  animation-name: showDialog;
+  animation-duration: 300ms;
 }
 
 dialog#new-list,
@@ -418,6 +420,8 @@ dialog#edit-task {
 
 dialog::backdrop {
   background-color: #00000099;
+  animation-name: showDialogBackdrop;
+  animation-duration: 300ms;
 }
 
 dialog .dialog-buttons {
@@ -1015,4 +1019,27 @@ dialog#delete-task button.primary {
 
 .button-icon svg {
   display: block;
+}
+
+/* Animations */
+
+@keyframes showDialog {
+  from {
+    transform: translate(0px, 100px);
+    opacity: 0;
+  }
+  to {
+    transform: translate(0px, 0px);
+
+    opacity: 1;
+  }
+}
+
+@keyframes showDialogBackdrop {
+  from {
+    background-color: #00000000;
+  }
+  to {
+    background-color: #00000099;
+  }
 }
