--- a/src/style.css
+++ b/src/style.css
@@ -1127,3 +1127,11 @@ dialog#delete-task button.primary {
     opacity: 0;
   }
 }
+
+/* Media queries */
+@media only screen and (max-width: 1100px) {
+  .task .sub-information {
+    flex-direction: column;
+    gap: 0;
+  }
+}
