--- a/src/style.css
+++ b/src/style.css
@@ -201,18 +201,20 @@ p {
 }
 
 .title-section {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto max-content;
   align-items: center;
-  justify-content: space-between;
   max-width: 100%;
+  min-width: 0;
+  min-height: 0;
   gap: 26px;
   margin-bottom: 48px;
   word-wrap: break-word;
 }
 
 .title-section #list-title {
-  flex: 1;
-  max-width: 80%;
+  min-width: 0;
+  min-height: 0;
 }
 
 .title-section .options-controller-button {
